<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:layout_marginLeft="2dp"
                android:textColor="@color/colorAccent"
                android:text="@string/status_of_tello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:overScrollMode="ifContentScrolls"
                android:id="@+id/recyclerViewStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:layout_marginLeft="2dp"
                android:textColor="@color/colorAccent"
                android:text="@string/now_task_list_of_tello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewTasks"
                    android:overScrollMode="ifContentScrolls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tv_no_task"
                    android:textColor="@color/colorAccent"
                    android:text="@string/not_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:layout_marginLeft="2dp"
                android:textColor="@color/colorAccent"
                android:text="@string/add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewNewTasks"
                android:overScrollMode="ifContentScrolls"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_no_connection"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/colorAccent"
            android:textSize="60sp"
            android:text="@string/no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>